--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
-            <version>5.6.3</version> <!-- Убедитесь, что используется последняя версия -->
+            <version>5.6.3</version>
             <scope>test</scope>
         </dependency>
 
